# zindi-canopy-crop-classification

./: README.md  hello.py  pyproject.toml
logs/: hyperparam_search_03262025_error.txt  hyperparam_search_03262025_output.txt
output/: model_03252025_v1_defaultkey_1_sub.csv  model_03252025_v1_defaultkey_2_sub.csv  model_03252025_v1_sub.csv
output/study_03262025/: Submission.csv  trials.csv
scr/: hyperparameter_search.py  main.py  run_hyperparam_search.sh
